[package]
name = "membarrier"
version = "0.2.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/membarrier-rs"
homepage = "https://github.com/jeehoonkang/membarrier-rs"
documentation = "https://docs.rs/membarrier"
description = "Memory barrier"
keywords = ["process-wide memory barrier", "barrier", "sys_membarrier", "FlushProcessWriteBuffers", "rcu"]
categories = ["memory-management", "concurrency", "os", "no_std"]

[dependencies]
cfg-if = "0.1"
lazy_static = "1.0"
libc = "0.2"
kernel32-sys = "0.2"
