[package]
name = "membarrier"
version = "0.2.3"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/membarrier-rs"
homepage = "https://github.com/jeehoonkang/membarrier-rs"
documentation = "https://docs.rs/membarrier"
description = "Process-wide memory barrier"
keywords = ["memory-barrier", "barrier", "sys_membarrier", "rcu"]
categories = ["memory-management", "concurrency", "os", "no-std"]

[dependencies]
cfg-if = "1.0"
lazy_static = "1.4"
libc = "0.2"
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading"] }
